2009-05-11  Lillian Angel  <langel@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java
	(getDefaultBaseDir): Added check for home dir. Return null if homeDir
	not found in system properties.

2009-05-11  Lillian Angel  <langel@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java
	(getDefaultBaseDir): Added null check.

2009-05-11  Lillian Angel  <langel@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java
	(getDefaultBaseDir): Set basedir for netx applications to ~/.netx,
	rather than asking. Now consistant with the plugin.
	* rt/net/sourceforge/jnlp/runtime/InstallDialog.java: Removed.

2009-05-08  Gary Benson  <gbenson@redhat.com>

	* Makefile.am: Always apply Zero and Shark patches.
	* patches/icedtea-test-atomic-operations.patch: Only test on Zero.
	* patches/icedtea-eclipse-hotspot-6614100-7b24.patch: Removed.
	* HACKING: Updated.	

2009-05-08  Andrew Haley  <aph@redhat.com>

	* patches/icedtea-lcms-2.patch: Work around lcms breakage.  See
	https://bugs.openjdk.java.net/show_bug.cgi?id=100050

2009-05-08  Robert Schuster  <robertschuster@fsfe.org>

	* configure.ac: Use --cxxflags instead of --cflags for llvm-config.

2009-05-08  Gary Benson  <gbenson@redhat.com>

	* Makefile.am: Removed patches and logic for building Zero and
	Shark with original HotSpot.

	* patches/icedtea-bytecodeInterpreterWithChecks.patch: Removed.
	* patches/icedtea-hotspot-6b14-7b24.patch: Likewise.
	* patches/icedtea-hotspot-citypeflow.patch: Likewise.
	* patches/icedtea-hotspot7-build-fixes.patch: Likewise.
	* patches/icedtea-signed-types.patch: Likewise.
	* patches/hotspot/original/icedtea-core-zero-build.patch: Likewise.

	* HACKING: Updated.

2009-05-05  Deepak Bhole <dbhole@redhat.com>

	* Makefile.am: Remove GCJ Web Plugin support.
	* configure.ac: Ditto.

2009-05-06  Lillian Angel  <langel@redhat.com>

	Fixes bz#498108
	* rt/net/sourceforge/jnlp/NetxPanel.java
	(runLoader): Pass false to JNLPRuntime.initialize, since this is an 
	applet.