@@ -258,11 +258,11 @@ class JNLPSecurityManager extends SecurityManager {
 
         // Enable this manually -- it'll produce too much output for -verbose
         // otherwise.
-//		if (true)
-//			System.out.println("Checking permission: " + perm.toString());
+	//	if (true)
+	//  	  System.out.println("Checking permission: " + perm.toString());
 
-        if (!JNLPRuntime.isWebstartApplication() && ("setPolicy".equals(name) ||
-            "setSecurityManager".equals(name)))
+        if (!JNLPRuntime.isWebstartApplication() && 
+	      ("setPolicy".equals(name) || "setSecurityManager".equals(name)))
             throw new SecurityException(R("RCantReplaceSM"));
 
         try {
