@@ -1,3 +1,10 @@
+2009-05-13  Lillian Angel  <langel@redhat.com>
+
+	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java
+	(PluginAppletSecurityContext): Added comment.	
+	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java
+	(checkPermission): Fixed style.
+
 2009-05-11  Lillian Angel  <langel@redhat.com>
 
 	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java
